@@ -18,6 +18,7 @@ For users:
 - New: Add more volume units (ounce, gallon, inch, feet, ...)
 - New: Delivery date accepts hours and minutes.
 - New: Can add a comment on stock dispatching to be save into stock movements.
+- New: Add option to send all emails sent to a bulk carbon copy.
 - Perf: Avoid reading database to determine country code after each
         page call.
 - Fix: Better Postgresql compatibility.
